# cs231n

CS231n/: .gitignore  CMakeLists.txt
CS231n/CSV/lib/: CMakeLists.txt  CSV.cpp  CSV.h  CSVData.cpp  CSVData.h  CSVExceptions.h  types.h
CS231n/CSV/test/: CMakeLists.txt  main.cpp
CS231n/Classifier/: CMakeLists.txt
CS231n/Classifier/lib/: CMakeLists.txt  Classifier.cpp  Classifier.h  KNN.cpp  KNN.h  SVM.cpp  SVM.h
CS231n/Classifier/test/: CMakeLists.txt  main.cpp
CS231n/Image/: CMakeLists.txt
CS231n/Image/lib/: CMakeLists.txt  Image.cpp  Image.h
CS231n/Image/test/: CMakeLists.txt  main.cpp
CS231n/ImageIterator/lib/: CMakeLists.txt  ImageIterator.cpp  ImageIterator.h
CS231n/ImageIterator/test/: CMakeLists.txt  main.cpp
build-CS231n-Desktop_Qt_5_14_1_MinGW_64_bit-Debug/: CMakeCache.txt  CS231n.cbp  Makefile  cmake_install.cmake
build-CS231n-Desktop_Qt_5_14_1_MinGW_64_bit-Debug/CSV/: Makefile  cmake_install.cmake
build-CS231n-Desktop_Qt_5_14_1_MinGW_64_bit-Debug/CSV/lib/: Makefile  cmake_install.cmake
build-CS231n-Desktop_Qt_5_14_1_MinGW_64_bit-Debug/CSV/test/: Makefile  cmake_install.cmake
build-CS231n-Desktop_Qt_5_14_1_MinGW_64_bit-Debug/Classifier/: Makefile  cmake_install.cmake
build-CS231n-Desktop_Qt_5_14_1_MinGW_64_bit-Debug/Classifier/lib/: Makefile  cmake_install.cmake
build-CS231n-Desktop_Qt_5_14_1_MinGW_64_bit-Debug/Classifier/test/: Makefile  (+1 more)
build-CS231n-Desktop_Qt_5_14_1_MinGW_64_bit-Debug/Image/: Makefile  cmake_install.cmake
build-CS231n-Desktop_Qt_5_14_1_MinGW_64_bit-Debug/ImageIterator/: Makefile  cmake_install.cmake
(+29 files in other folders)
